--- a/app/assets/stylesheets/pages/nbauserlineup.scss
+++ b/app/assets/stylesheets/pages/nbauserlineup.scss
@@ -38,6 +38,9 @@
         background-color: rgba(100,200,70,.7);
         width: 75px;
       }
+      input{
+        background-color: rgba(100,200,70,.7);
+      }
     }
   }
 }
