--- a/app/views/nbaplayers/list.html.erb
+++ b/app/views/nbaplayers/list.html.erb
@@ -11,18 +11,21 @@
         <th>Cost</th>
         <th></th>
       </tr>
-    </thead>
-    <tbody>
-      <% @nbaplayers.where(:position=>'PG').each do |nbaplayer|%>
+      <% @players.each do |player| %>
         <tr>
-          <td><%= nbaplayer[:position] %></td>
+          <td class="leftmost"><%= nbaplayer[:position] %></td>
           <td><%= nbaplayer[:name] %></td>
           <td><%= nbaplayer[:team]%></td>
           <td><%= nbaplayer[:avgpoints] %></td>
           <td><%= nbaplayer[:cost] %></td>
-          <td><%= button_to "Add", {:controller => "lineup_items",:action=>"create", :id=>nbaplayer[:id], method: :post}%>
+          <td><%= button_to "+", {} %></td>
+            <td></td>
+          <% end %>
         </tr>
-        <% end %>
+        <tr>
+    </thead>
+    <tbody>
+      <div id="player_list"></div>
     </tbody>
   </table>
   <br>
@@ -42,7 +45,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr><td class="leftmost">PG</td></tr>
+      <tr><td class="leftmost">PG</td><td id="player_list"></td></tr>
       <tr><td class="leftmost">PG</td></tr>
       <tr><td class="leftmost">SG</td></tr>
       <tr><td class="leftmost">SG</td></tr>
