--- a/app/assets/stylesheets/pages/nbauserlineup.scss
+++ b/app/assets/stylesheets/pages/nbauserlineup.scss
@@ -2,6 +2,8 @@
   display: block;
   .user-lineup-table{
     margin: 0 auto;
+    position: relative;
+
     width: 10em;
     table-layout: fixed;
     background-color: rgba(255,255,255,.8);
@@ -14,6 +16,7 @@
             width: 50px;
         }
         th{
+          background-color: rgba(100,200,70,.7);
           font-size: 1em;
           text-align: left;
           padding: .5em;
@@ -26,7 +29,7 @@
         background-color: rgba(255,255,255,.7);
         .leftmost{
           background-color: rgba(100,200,70,.7);
-          width: 50px;
+          width: 25px;
         }
         td{
           padding: .5em;
