Finished lineup functionality with brittle code, need to strengthen

--- a/app/assets/stylesheets/pages/nbauserlineup.scss
+++ b/app/assets/stylesheets/pages/nbauserlineup.scss
@@ -1,13 +1,13 @@
 .userlineup{
+  h3{
+    text-align: center;
+  }
   display: block;
+  position: relative;
+  margin: 0 auto;
   .user-lineup-table{
-    margin: 0 auto;
-    position: relative;
-
-    width: 10em;
-    table-layout: fixed;
+    table-layout: auto;
     background-color: rgba(255,255,255,.8);
-    float: left;
     padding: .5em;
     thead{
       padding: 1em;
